--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: "kotlin-kapt"
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 29
@@ -28,8 +30,32 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    //material
+    implementation 'com.google.android.material:material:1.3.0-alpha02'
+    //coordinator layout
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
+    //constraint layout
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    //live data and view model
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    //retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.4.0"
+    implementation "com.squareup.retrofit2:converter-moshi:2.4.0"
+    //dagger
+    implementation "com.google.dagger:dagger:2.24"
+    kapt "com.google.dagger:dagger-compiler:2.20"
+    compileOnly "org.glassfish:javax.annotation:3.1.1"
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    //kotlin coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
+    testImplementation 'org.mockito:mockito-core:2.28.2'
+    androidTestImplementation 'org.mockito:mockito-android:2.6.3'
+    testImplementation 'org.mockito:mockito-inline:2.11.0'
+    testImplementation 'android.arch.core:core-testing:1.1.1'
 }
