implement create activity, location actions fragment and floating action button for opening create location activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,5 +23,7 @@
         <activity
             android:name=".locations.activities.LocationDetailsActivity"
             android:launchMode="singleTask"/>
+        <activity android:name=".locations.activities.CreateLocationActivity"
+            android:launchMode="singleTask"/>
     </application>
 </manifest>
