create activity starter as independent class and add edit image and action for location

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         <activity
             android:name=".locations.activities.LocationDetailsActivity"
             android:launchMode="singleTask"/>
-        <activity android:name=".locations.activities.CreateLocationActivity"
+        <activity android:name=".locations.activities.LocationActionsActivity"
             android:launchMode="singleTask"/>
     </application>
 </manifest>
